--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                 </ul>
             </nav>
 
-            <div class="hero-text text-white w-100 px-2 px-sm-0" >
-                <h1 class="display-4" data-aos="zoom-in">Katrien Vermiert</h1>
-                <h3 class="display-5" data-aos="zoom-in"> - Junior Web developer - </h3>
-                <a class="btn mt-4 mr-2 text-white" data-aos="zoom-in" href="#about">About me</a>
-                <a class="btn mt-4 ml-2 text-white" data-aos="zoom-in" href="#contact">Contact</a>
+            <div class="hero-text text-center text-white w-100 px-2 px-sm-0" >
+                <h1 class="display-4" data-aos="fade-right">Katrien Vermiert</h1>
+                <h3 class="display-5" data-aos="fade-right"> - Junior Web developer - </h3>
+                <a class="btn mt-4 mr-2 text-white" data-aos="fade-left" href="#about">About me</a>
+                <a class="btn mt-4 ml-2 text-white" data-aos="fade-left" href="#contact">Contact</a>
             </div>
 
             <div class="icon-scroll">
@@ -58,13 +58,13 @@
 
     <main>
         <section class="about" id="about">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row align-items-lg-center">
                     <div class="col-12 col-md-6">
-                        <img class="img-fluid" data-aos="fade-right" src="images/picture.jpg" alt="profile picture">
+                        <img class="img-fluid" data-aos="zoom-in" src="images/picture.jpg" alt="profile picture">
                     </div>
                     <div class="col-12 col-md-6 text-center">
-                        <div class="section-heading mt-3" data-aos="fade-left">
+                        <div class="section-heading mt-3" data-aos="zoom-in">
                             <h1 class="display-4">Profile</h1>
                             <p>Hi, my name is Katrien.</p>
                             <p>I am a motivated Junior Web developer with 7 months of experience. I successfully completed an intensive web development course at Becode.org and am now looking for a challenging internship. My skills include: HTML5, CSS3, Javascript, Vue.js and the basics of PHP, MySOL and Java. </p>
@@ -102,6 +102,17 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <p class="name mt-4"><i class="far fa-copyright"></i> Katrien Vermiert</p>
+                </div>
+
+            </div>
+        </div>
+    </footer>
 
     <!-- scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
