--- a/portfolio.html
+++ b/portfolio.html
@@ -192,7 +192,9 @@
             </div>
             
         </div>
-        <button class="btn text-white m-3" id="button" onclick="show()">See more</button>
+        <div class="text-center">
+            <button class="btn text-white mb-4 mt-4" id="button" onclick="show()">See more</button>
+        </div>
 
     </main>
 
