--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a class="nav-link text-white" href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="MijnCV.pdf" target="_blank">Download resume</a>
+                        <a class="nav-link text-white" href="KatrienVermiert.pdf" target="_blank">Download resume</a>
                     </li>
                 </ul>
             </nav>
