added new version of resume and changed profile

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                         <div class="section-heading mt-3" data-aos="zoom-in">
                             <h1 class="display-4">Profile</h1>
                             <p>Hi, my name is Katrien.</p>
-                            <p>I am a motivated Junior Web developer with 7 months of experience. I successfully completed an intensive web development course at Becode.org and am now looking for a challenging internship. My skills include: HTML5, CSS3, Javascript, Vue.js and the basics of PHP, MySQL and Java. </p>
+                            <p>I am a motivated Junior Web developer with 9 months experience. I successfully completed an intensive web development course at Becode.org and am now looking for a job in front end development that will give me the opportunity to develop my skills and grow professionaly.</p>
+                            <p>My skills include: HTML5, CSS3, Javascript, JQuery, Vue.js and the basics of PHP.</p>
                         </div>
                     </div>
                 </div>
